--- a/index.html
+++ b/index.html
@@ -367,6 +367,26 @@
           <p>A comprehensive guide to the citywide music festival and fundraiser supporting Austin's musicians.</p>
         </div>
       </a>
+      <a href="austin-music.html" class="article-card">
+        <div class="card-image">
+          <amp-img src="assets/Piemaster-Gibson-Flying-V.webp" width="497" height="497" layout="responsive"
+            alt="Music Feed"></amp-img>
+        </div>
+        <div class="card-content">
+          <h3>Daily Music Feed</h3>
+          <p>Your daily source for music news and happenings from the Austin Chronicle.</p>
+        </div>
+      </a>
+      <a href="park.html" class="article-card">
+        <div class="card-image">
+          <amp-img src="assets/parks.webp" width="2000" height="1333" layout="responsive"
+            alt="Park with dogs and people"</amp-img>
+        </div>
+        <div class="card-content">
+          <h3>Austin Parks</h3>
+          <p>Your daily source for music news and happenings from Austin Parks.org.</p>
+        </div>
+      </a>
       <a href="downton.html" class="article-card">
         <div class="card-image">
           <amp-img src="assets/Highclere_Castle.webp" width="1015" height="764" layout="responsive"
@@ -486,15 +506,7 @@
           <p>A collection of articles about the city of Austin.</p>
         </div>
       </a>
-      <a href="austin-music.html" class="article-card">
-        <div class="card-image">
-          <amp-img src="assets/Piemaster-Gibson-Flying-V.webp" width="497" height="497" layout="responsive" alt="Music Feed"></amp-img>
-        </div>
-        <div class="card-content">
-          <h3>Daily Music Feed</h3>
-          <p>Your daily source for music news and happenings from the Austin Chronicle.</p>
-        </div>
-      </a>
+
     </div>
   </main>
   <footer class="footer">
