--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
       <a href="park.html" class="article-card">
         <div class="card-image">
           <amp-img src="assets/parks.webp" width="2000" height="1333" layout="responsive"
-            alt="Park with dogs and people"</amp-img>
+            alt="Park with dogs and people"></amp-img>
         </div>
         <div class="card-content">
           <h3>Austin Parks</h3>
