--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
       </a>
       <a href="austin-music.html" class="article-card">
         <div class="card-image">
-          <amp-img src="assets/Piemaster-Gibson-Flying-V.webp" width="497" height="497" layout="responsive"
+          <amp-img src="assets/austinmusic4.webp" width="5226" height="3484" layout="responsive"
             alt="Music Feed"></amp-img>
         </div>
         <div class="card-content">
