--- a/traffic.html
+++ b/traffic.html
@@ -146,7 +146,7 @@
             <h1>Austin, You're Drunk: A Survivor's Guide to Parking & Traffic in the Live Music Capital (Before It Drives You Crazy)</h1>
 
             <div class="media-container">
-                <img src=</div>
+                <img src='assets/traffic.png</div>
 
             <div class="intro-section">
                 <h2>"Keep Austin Weird... and Congested?"</h2>
@@ -239,3 +239,4 @@
     </div>
 </body>
 </html>
+
