--- a/index.html
+++ b/index.html
@@ -368,6 +368,26 @@
           <p>A comprehensive guide to the citywide music festival and fundraiser supporting Austin's musicians.</p>
         </div>
       </a>
+            <a href="traffic.html" class="article-card">
+        <div class="card-image">
+          <amp-img src="assets/traffic.jpg" width="885" height="885" layout="responsive"
+            alt="Austin Traffic"></amp-img>
+        </div>
+        <div class="card-content">
+          <h3>Austin Traffic & Parking</h3>
+          <p>Thoughts on the madness.</p>
+        </div>
+      </a>
+            <a href="brunch_parking.html" class="article-card">
+        <div class="card-image">
+          <amp-img src="assets/brunch.jpg" width="885" height="885" layout="responsive"
+            alt="Brunch & Parking Austin"></amp-img>
+        </div>
+        <div class="card-content">
+          <h3>Brunch & Parking in ATX</h3>
+          <p>If you're going to battle Saturday AM traffic for breakfast you should at least get decent parking.</p>
+        </div>
+      </a>
       <a href="eater.html" class="article-card">
         <div class="card-image">
           <amp-img src="assets/pexels-ash-craig-122861-376464.jpg" width="885" height="540" layout="responsive"
