--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
       </a>
             <a href="traffic.html" class="article-card">
         <div class="card-image">
-          <amp-img src="assets/traffic.jpg" width="885" height="885" layout="responsive"
+          <amp-img src="assets/traffic.png" width="885" height="885" layout="responsive"
             alt="Austin Traffic"></amp-img>
         </div>
         <div class="card-content">
@@ -380,7 +380,7 @@
       </a>
             <a href="brunch_parking.html" class="article-card">
         <div class="card-image">
-          <amp-img src="assets/brunch.jpg" width="885" height="885" layout="responsive"
+          <amp-img src="assets/brunch.png" width="885" height="885" layout="responsive"
             alt="Brunch & Parking Austin"></amp-img>
         </div>
         <div class="card-content">
