--- a/traffic.html
+++ b/traffic.html
@@ -22,7 +22,8 @@
             color: var(--neutral-dark);
             line-height: 1.6;
         }
-
+h2 {  font-size: 2rem; /* text-lg */
+}
 
 
         p {
@@ -205,6 +206,7 @@
     </div>
 </body>
 </html>
+
 
 
 
