--- a/traffic.html
+++ b/traffic.html
@@ -24,7 +24,8 @@
         }
 h2 {  font-size: 2rem; /* text-lg */
 }
-
+h3 {  font-size: 2rem; /* text-lg */
+}
 
         p {
             margin-bottom: 1rem; /* mb-4 */
@@ -206,6 +207,7 @@ h2 {  font-size: 2rem; /* text-lg */
     </div>
 </body>
 </html>
+
 
 
 
