--- a/index.html
+++ b/index.html
@@ -368,6 +368,16 @@
           <p>A comprehensive guide to the citywide music festival and fundraiser supporting Austin's musicians.</p>
         </div>
       </a>
+                  <a href="924.html" class="article-card">
+        <div class="card-image">
+          <amp-img src="assets/924.webp" width="885" height="885" layout="responsive"
+            alt="Austin Traffic"></amp-img>
+        </div>
+        <div class="card-content">
+          <h3>News of the World</h3>
+          <p>for 9/24/2025.</p>
+        </div>
+      </a>
             <a href="traffic.html" class="article-card">
         <div class="card-image">
           <amp-img src="assets/traffic.png" width="885" height="885" layout="responsive"
