--- a/924-2.html
+++ b/924-2.html
@@ -94,7 +94,7 @@
   <amp-auto-ads type="adsense" data-ad-client="ca-pub-3239465181490887">
   </amp-auto-ads>
     <div class="blog-container">
-        <amp-img class="amp-img-container" src='assets/924-5' layout="responsive" height="100" width="100">     <article>
+        <amp-img class="amp-img-container" src='assets/924-5' alt="image of news of 9-24-2025"  layout="responsive" height="100" width="100">     <article>
             <h1 class="text-primary-dark">September 24th: A Day in the Wild World of US Politics</h1>
 
             <section>
@@ -142,4 +142,5 @@
     </div>
 </body>
 </html>
+
 
