--- a/3i-atlas-article.html
+++ b/3i-atlas-article.html
@@ -220,7 +220,7 @@
       <h3>The Internal Light</h3>
       <p>Is it hype? For weeks, observers debated faint, regular pulses of light emanating from Atlas. Initial theories suggested they were simply glints of sunlight reflecting off a rotating, metallic surface. However, as the object has drawn closer, multiple observatories have confirmed the pulses are not correlated with its rotation relative to the sun. The light appears to be generated internally. We do not know why, or how.</p>
 
-      <amp-img src="img/placeholder.jpg" alt="Placeholder image" class="article-image" width="800" height="450" layout="responsive"></amp-img>
+      <amp-img src="assets/comet-31-atlas.gif" alt="Placeholder image" class="article-image" width="800" height="800" layout="responsive"></amp-img>
 
       <h3>Just Space Debris? An Elaborate Scare Campaign?</h3>
       <p>The "space debris" theory is becoming harder to defend. Natural objects do not make course corrections or generate their own patterned light. While its composition shows some metallic elements, they are in ratios unfamiliar to asteroids in our system. It is not behaving like any known natural phenomenon.</p>
