--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
       </a>
       <a href="taylor-swift-article.html" class="article-card">
         <div class="card-image">
-          <amp-img src="assets/taylor-swift-eras-tour.webp" width="600" height="400" layout="responsive" alt="Taylor Swift on stage"></amp-img>
+          <amp-img src="assets/ts.webp" width="600" height="400" layout="responsive" alt="Taylor Swift on stage"></amp-img>
         </div>
         <div class="card-content">
           <h3>The Billionaire's Ballad: Does Taylor Swift's New Album Hit the Right Note?</h3>
