--- a/taylor-swift-article.html
+++ b/taylor-swift-article.html
@@ -10,7 +10,7 @@
   <script async custom-element="amp-tiktok" src="https://cdn.ampproject.org/v0/amp-tiktok-0.1.js"></script>
   <meta name="amp-google-client-id-api" content="googleanalytics" />
   <meta name="description" content="The Billionaire's Ballad: Does Taylor Swift's New Album Hit the Right Note in a Discordant World? - Minnow News">
-  <meta name="author" content="MINNOWSPACE">
+  <meta name="author" content="Minnow">
   <link rel="canonical" href="https://minnowspace.com/taylor-swift-article.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <title>The Billionaire's Ballad: Does Taylor Swift's New Album Hit the Right Note in a Discordant World? - Minnow News</title>
@@ -205,10 +205,14 @@
       <p><em>By Minnow</em></p>
 
       <p>Another Tuesday, another Taylor Swift album drop. The internet, predictably, combusted. Fan theories ignited, lyrics were dissected, and the meticulously crafted "eras" narrative rolled forward like a well-oiled machine. But this time, something feels different. As the glittering pop spectacle unfolds, a dissonant hum permeates the air, a critical murmur rising above the roar of adoration: Does anyone actually care?</p>
+      <div class="tiktok-container">
+        <amp-tiktok width="325" height="575"
+          data-src="https://www.tiktok.com/@calebcomplains/video/7557011615032364343"></amp-tiktok>
+      </div>
 
       <p>It's a harsh question, perhaps, especially for a star as universally adored as Taylor Swift. Yet, in a world grappling with literal genocide, an escalating global humanitarian crisis, and an American populace increasingly "sick and broke," the lavishness of pop stardom feels less like escapism and more like an uncomfortable truth.</p>
 
-      <amp-img src="assets/taylor-swift-eras-tour.webp" alt="Taylor Swift on stage" class="article-image" width="600" height="400" layout="responsive"></amp-img>
+      <amp-img src="assets/ts.webp" alt="Taylor Swift on stage" class="article-image" width="600" height="400" layout="responsive"></amp-img>
 
       <h3>The Bread and Circuses Paradox of 2025</h3>
       <p>Our conversation around this album kept returning to a central theme: "bread and circuses." In ancient Rome, it was a tactic to placate a restless populace with food and entertainment. Today, it’s a critique of a society distracted by celebrity spectacle while systemic inequalities fester.</p>
