--- a/austin-music.html
+++ b/austin-music.html
@@ -99,7 +99,7 @@ text-align: center;
       <h2><a href="{{link}}" target="_blank">{{title}}</a></h2>
       <p class="date">{{pubDate}}</p>
       <amp-img class="description">  alt="A view of the sea"
-  src= "{{description.img}}"
+  src= "{{description.figure.img}}"
   width="900"
   height="675"
   layout="responsive"</amp-img>
