--- a/austin-music.html
+++ b/austin-music.html
@@ -98,7 +98,7 @@ text-align: center;
     <div class="feed-item">
       <h2><a href="{{link}}" target="_blank">{{title}}</a></h2>
       <p class="date">{{pubDate}}</p>
-        <img>{{description.figure}}</img>
+      {{#description}} {{#figure}} <img>{{figure}}</img> {{/figure}} {{/description}}
       <amp-img alt="A view of the sea"
   src= {{description.figure.img}}
   width="900"
