--- a/austin-music.html
+++ b/austin-music.html
@@ -98,7 +98,9 @@ text-align: center;
     <div class="feed-item">
       <h2><a href="{{link}}" target="_blank">{{title}}</a></h2>
       <p class="date">{{pubDate}}</p>
-      {{#description}} {{#figure}} <img>{{img}}</img> {{/figure}} {{/description}}
+      {{#description}} {{#figure}} <amp-img src={{img}}   width="900"
+  height="675"
+  layout="responsive"></amp-img> {{/figure}} {{/description}}
       <amp-img alt="A view of the sea"
   src= {{description.figure.img}}
   width="900"
