Fix HTML template for music feed item display

--- a/austin-music.html
+++ b/austin-music.html
@@ -98,6 +98,9 @@ text-align: center;
     <div class="feed-item">
       <h2><a href="{{link}}" target="_blank">{{title}}</a></h2>
       <p class="date">{{pubDate}}</p>
+<p>      {{#description}} {{#figure}} <p>{{p}}</p>{{img}} {{/figure}} {{/description}}</p>
+
+        
       {{#description}} {{#figure}} <amp-img src={{img}}   width="900"
   height="675"
   layout="responsive"></amp-img> {{/figure}} {{/description}}
