Fix whitespace in description template
Removed extra whitespace in description rendering.

--- a/austin-music.html
+++ b/austin-music.html
@@ -98,7 +98,7 @@ text-align: center;
     <div class="feed-item">
       <h2><a href="{{link}}" target="_blank">{{title}}</a></h2>
       <p class="date">{{pubDate}}</p>
-<p>      {{#description}} {{#figure}} <p>{{p}}</p>{{img}} {{/figure}} {{/description}}</p>
+<p>      {{#description}} {{#figure}} <p>{{p}}</p> {{/figure}} {{/description}}</p>
 
         
       {{#description}} {{#figure}} <amp-img src={{img}}   width="900"
