Refactor template for description and figure handling

--- a/austin-music.html
+++ b/austin-music.html
@@ -98,17 +98,12 @@ text-align: center;
     <div class="feed-item">
       <h2><a href="{{link}}" target="_blank">{{title}}</a></h2>
       <p class="date">{{pubDate}}</p>
-<p>      {{#description}} {{#figure}} <p>{{p}}</p> {{/figure}} {{/description}}</p>
-
+<p>      {{description}} {{figure}} {{p}}</p> 
         
-      {{#description}} {{#figure}} <amp-img src={{img}}   width="900"
+     <amp-img src={{figure.img}}   width="900"
   height="675"
-  layout="responsive"></amp-img> {{/figure}} {{/description}}
-      <amp-img alt="A view of the sea"
-  src= {{description.figure.img}}
-  width="900"
-  height="675"
-  layout="responsive"></amp-img>
+  layout="responsive"></amp-img> 
+
     </div>
   </template>
 </amp-list>
