Change description rendering to HTML format
Updated the template to render description as HTML.

--- a/austin-music.html
+++ b/austin-music.html
@@ -98,7 +98,7 @@ text-align: center;
     <div class="feed-item">
       <h2><a href="{{link}}" target="_blank">{{title}}</a></h2>
       <p class="date">{{pubDate}}</p>
-<p>      {{description}} {{figure}} {{p}}</p> 
+<p>      {{{description}}} </p> 
         
      <amp-img src={{figure.img}}   width="900"
   height="675"
