Update image source in austin-music.html

--- a/austin-music.html
+++ b/austin-music.html
@@ -100,7 +100,7 @@ text-align: center;
       <p class="date">{{pubDate}}</p>
 <p>      {{{description}}} </p> 
         
-     <amp-img src={{{img}}}   width="900"
+     <amp-img src={{{description.figure.img}}}   width="900"
   height="675"
   layout="responsive"></amp-img> 
 
