Add author information to music feed item

--- a/austin-music.html
+++ b/austin-music.html
@@ -98,6 +98,7 @@ text-align: center;
     <div class="feed-item">
       <h2><a href="{{link}}" target="_blank">{{title}}</a></h2>
       <p class="date">{{pubDate}}</p>
+        <p> {{author}}</p>    
 <p>      {{{description}}} </p> 
         
      <amp-img src={{{thumbnail}}}   width="900"
