--- a/taylor-swift-necklace-controversy-article.html
+++ b/taylor-swift-necklace-controversy-article.html
@@ -223,6 +223,11 @@
       <amp-img src="assets/IMG_1437.png" width="600" height="400" layout="responsive" alt="Taylor Swift Necklace"></amp-img>
       <p>The release of Taylor Swift's latest album, The Life of a Showgirl, has been met with typical commercial success but has also ignited an unexpected and highly inflammatory controversy centering on visual symbolism. The debate, fueled primarily by social media speculation, alleges that certain merchandise and aesthetic choices contain "dog whistles"—coded messages—to white nationalist groups.</p>
       <p>At the heart of the storm is a piece of jewelry and a collection of visual motifs that critics claim are too close to historical hate imagery to be dismissed as coincidence.</p>
+            <div class="tiktok-container">
+          <amp-tiktok width="325" height="575"
+            data-src="https://www.tiktok.com/@be3f22ab/video/7560985940013927711"></amp-tiktok>
+        </div>
+      
       <h3>The Necklace: Lightning Bolts, Numerology, and the SS Allegation</h3>
       <p>Shortly after the album rollout, a merchandise item—often referred to as the "Opalite necklace"—was added to Swift's online store. It was quickly scrutinized by online commentators, leading to its rapid and quiet removal.</p>
       <p>The core of the backlash revolved around three specific symbolic claims:</p>
