--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta name="description"
     content="Minnow News brings you the latest trending stories, viral headlines, and in-depth articles on everything from pop culture to tech. Stay ahead of the curve with our daily news updates.">
   <meta name="author" content="MINNOWSPACE">
-  <link rel="canonical" href="https://minnowspace.com/index.html">
+  <link rel="canonical" href="https://minnowspace.com">
   <link rel="preload" href="assets/Piemaster-Gibson-Flying-V.webp" as="image">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <title>Minnow News - Trending Stories and Viral Headlines</title>
