--- a/index.html
+++ b/index.html
@@ -21,6 +21,28 @@
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <title>Minnow News - Trending Stories and Viral Headlines</title>
 
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Baustin [Your Real Last Name]",
+        "jobTitle": "Music Blogger, Guitarist, Former DJ",
+        "affiliation": [
+          {"@type": "Organization", "name": "Berklee College of Music"},
+          {"@type": "Organization", "name": "WWLR 91.5 FM"},
+          {"@type": "Organization", "name": "HMV Records"},
+          {"@type": "Organization", "name": "The Wall"},
+          {"@type": "Organization", "name": "Invein"},
+          {"@type": "Organization", "name": "The Anomies"}
+        ],
+        "description": "Berklee-trained guitarist, former WWLR 'Sketch Pad' DJ, and HMV veteran covering Austin's music scene with a New England-to-ATX perspective, from Stereolab gigs to local psych-rock.",
+        "url": "[Your Blog URL, e.g., https://minnowspace.com/about]",
+        "sameAs": [
+          "https://x.com/minnowspace",
+          "[Your Spotify or SoundCloud Link, e.g., https://soundcloud.com/baustinrocks]"
+        ]
+      }
+      </script>
   <!-- AMP Boilerplate -->
   <style amp-boilerplate>
     body {
