--- a/about.html
+++ b/about.html
@@ -83,19 +83,23 @@
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "Baustin",
-    "jobTitle": "Music Blogger, Guitarist, Former DJ",
+    "jobTitle": "Music Blogger, Guitarist, Former DJ, Tech Enthusiast",
     "affiliation": [
       {"@type": "Organization", "name": "Berklee College of Music"},
       {"@type": "Organization", "name": "WWLR 91.5 FM"},
       {"@type": "Organization", "name": "HMV Records"},
       {"@type": "Organization", "name": "The Wall"},
-      {"@type": "Organization", "name": "The Vinyl Community"}
+      {"@type": "Organization", "name": "Invein"},
+      {"@type": "Organization", "name": "The Anomies"},
+      {"@type": "Organization", "name": "YouTube Vinyl Community"},
+      {"@type": "Organization", "name": "Austin Tech Community"}
     ],
-    "description": "Berklee-trained guitarist, former WWLR 'Sketch Pad' DJ, and HMV veteran covering Austin's music scene, from Stereolab gigs to local psych-rock.",
+    "description": "Berklee-trained guitarist, former WWLR 'Sketch Pad' DJ, HMV veteran, and ATX tech enthusiast covering Austin's music scene, from Stereolab gigs to local psych-rock, with a passion for the YouTube Vinyl Community.",
     "url": "https://minnowspace.com/about.html",
     "sameAs": [
       "https://x.com/minnowspace",
-      "https://open.spotify.com/user/123753906"
+      "https://open.spotify.com/user/123753906",
+      "https://www.youtube.com/@[YourYouTubeHandle]"
     ],
     "contactPoint": {
       "@type": "ContactPoint",
@@ -219,12 +223,12 @@
   <main>
     <article>
       <h1>About Baustin</h1>
-      <p>I’m <strong>Baustin</strong>, a guitarist, ex-DJ, and music obsessive who traded Vermont’s snowy dives for
+      <p>I’m <strong>Baustin</strong>, a guitarist, ex-DJ, and music obsessive who swapped Vermont’s snowy dives for
         Austin’s sweaty stages—New England grit meets ATX weird, hence the name (a nod to my Boston-area roots). My
         life’s a genre-hopping mixtape: Shredding metal with <strong>Invein</strong>, grinding grunge with <strong>Full
           Frontal Nudity</strong>, rocking <strong>Exit 13</strong>, and jangling 60s Beatles vibes with <strong>The
           Anomies</strong>. I’ve belted “Sweet Caroline” at karaoke, worked musical theater stages, and chased gigs that
-        defined me—from Phish’s <em>Lemonwheel</em> bliss to Pearl Jam at Boston Garden the week Kurt Cobain died.</p>
+        shaped me—from Phish’s <em>Lemonwheel</em> bliss to Pearl Jam at Boston Garden the week Kurt Cobain died.</p>
       <p>I honed my guitar chops at <strong>Berklee’s Five-Week Summer Performance Program</strong>, a metalhead lost
         among jazz cats, dodging theory while my Chicago blues sax roommate blasted <em>All Blues</em> (I was Team
         Breeders’ <em>Cannonball</em>). Those weeks taught me to find soul in any riff, now fueling my takes on Austin’s
@@ -233,20 +237,24 @@
         chaos: 6am Sunday jazz slots (no parties, just Medeski Martin & Wood, Diana Krall, United Future Organization
         vinyl) to my freeform <em>Sketch Pad</em> show with Faith No More, Orbital, and Smashing Pumpkins. Before that,
         I slung CDs at <strong>HMV Records</strong> and <strong>The Wall</strong> in Natick Mall during <em>OK
-          Computer</em>’s drop, swimming in promo swag like <em>Dots and Loops</em> and Dido mugs (pre-fame flops). My
-        CD collection? A sprawl from Pavement promos to Stereolab’s 18-minute <em>Jenny Ondioline</em>.</p>
+          Computer</em>’s drop, building a wild CD/vinyl collection—Pavement promos, Stereolab’s 18-minute <em>Jenny
+          Ondioline</em>, and a <em>Dots and Loops</em> promo that still spins.</p>
       <p>My gig log’s a novel: Survived the Green Day riot, caught Nine Inch Nails with Marilyn Manson at Boston
         Garden’s last days, banged my head at Metallica/Guns N’ Roses/Faith No More, and vibed at Elton John/Billy Joel
         and Lady Gaga. Stereolab’s Halloween 2025 show in Austin? A full-circle moment, their <em>Electrons and
           Particles</em> album (heard first on a London flight) channeling <em>Stranger Things</em> synths and
-        Khruangbin’s Texas groove—a 4.0 era of joy post-Mary Hansen’s loss. Oh, and learning Schema.org for this blog?
-        Blew my mind when I realized Hansen’s side project was called <em>Schema</em>—cosmic, right?</p>
-      <p>Now, <strong>Minnow News</strong> is my stage to cover Austin’s sonic pulse: Reviews of Stubb’s shredders, SXSW
-        spotlights, and gig tales from a fan who’s seen it all. Follow me on <a href="https://x.com/[YourHandle]">X</a>
-        for live takes, check my <a href="[Your Spotify/SoundCloud Link]">Spotify “Baustin’s ATX Picks”</a> for
-        Stereolab and local psych, or hit <a href="mailto:contact@minnowspace.com">contact@minnowspace.com</a> with band
-        tips. Let’s keep Austin loud and weird.</p>
-      <p><em>—Baustin, your metal-to-jazz, gig-to-radio storyteller.</em></p>
+        Khruangbin’s Texas groove—a joyful 4.0 era post-Mary Hansen’s loss. Learning Schema.org for this blog blew my
+        mind when I realized Hansen’s side project was <em>Schema</em>—cosmic, right?</p>
+      <p>I’m also part of Austin’s <strong>tech and coding community</strong>, geeking out on semantic HTML and
+        Schema.org to make this blog AI-friendly, connecting with ATX coders to blend tech and tunes. As a fan of the
+        <strong>YouTube Vinyl Community (VC)</strong>, I’m obsessed with vinyl hauls and reviews, from my HMV-era
+        <em>Dots and Loops</em> to rare finds shared on YouTube, fueling my love for Austin’s retro scene.
+        <strong>Minnow News</strong> is my stage for Austin’s sonic and tech pulse: Reviews of Stubb’s shredders, SXSW
+        spotlights, and vinyl tales. Follow me on <a href="https://x.com/minnowspace">X</a>, check my <a
+          href="https://open.spotify.com/user/123753906">Spotify “Baustin’s ATX Picks”</a> for Stereolab and local
+        psych, or hit <a href="mailto:zineithzine@gmail.com">zineithzine@gmail.com</a> with band or tech meetup tips.
+        Let’s keep Austin loud, weird, and wired.</p>
+      <p><em>—Baustin, your metal-to-jazz, vinyl-to-tech storyteller.</em></p>
     </article>
   </main>
   <footer>
