--- a/about.html
+++ b/about.html
@@ -227,7 +227,7 @@
         Austin’s sweaty stages—New England grit meets ATX weird, hence the name (a nod to my Boston-area roots). My
         life’s a genre-hopping mixtape: Shredding metal with <strong>Invein</strong>, grinding grunge with <strong>Full
           Frontal Nudity</strong>, rocking <strong>Exit 13</strong>, and jangling 60s Beatles vibes with <strong>The
-          Anomies</strong>. I’ve belted “Sweet Caroline” at karaoke, worked musical theater stages, and chased gigs that
+          Anomies</strong>. I’ve belted “Bad Medicine” at karaoke, worked musical theater stages, and chased gigs that
         shaped me—from Phish’s <em>Lemonwheel</em> bliss to Pearl Jam at Boston Garden the week Kurt Cobain died.</p>
       <p>I honed my guitar chops at <strong>Berklee’s Five-Week Summer Performance Program</strong>, a metalhead lost
         among jazz cats, dodging theory while my Chicago blues sax roommate blasted <em>All Blues</em> (I was Team
