--- a/about.html
+++ b/about.html
@@ -237,9 +237,8 @@
         chaos: 6am Sunday jazz slots (no parties, just Medeski Martin & Wood, Diana Krall, United Future Organization
         vinyl) to my freeform <em>Sketch Pad</em> show with Faith No More, Orbital, and Smashing Pumpkins. Before that,
         I slung CDs at <strong>HMV Records</strong> and <strong>The Wall</strong> in Natick Mall during <em>OK
-          Computer</em>’s drop, building a wild CD/vinyl collection—Pavement promos, Stereolab’s 18-minute <em>Jenny
-          Ondioline</em>, and a <em>Dots and Loops</em> promo that still spins.</p>
-      <p>My gig log’s a novel: Survived the Green Day riot, caught Nine Inch Nails with Marilyn Manson at Boston
+          Computer</em>’s drop, building a wild CD/vinyl collection—Think Lemonheads promos, 90s Euro Raves, Britpop, Stereolab’s Transient Random Noise Bursts With Announcements, I got OK Computer a day before it was released and I was (and still am) a critic lol, the Bends is underrated and better there I said it.  </p>
+      <p>My gig log’s a novel: Survived the Green Day riot, Phish at Lemonwheel and Fenway Park, caught Nine Inch Nails with Marilyn Manson at Boston
         Garden’s last days, banged my head at Metallica/Guns N’ Roses/Faith No More, and vibed at Elton John/Billy Joel
         and Lady Gaga. Stereolab’s Halloween 2025 show in Austin? A full-circle moment, their <em>Electrons and
           Particles</em> album (heard first on a London flight) channeling <em>Stranger Things</em> synths and
