--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
             <amp-img src="assets/bills.jpg" width="497" height="497" layout="responsive" alt="SXSW 2026"></amp-img>
           </div>
           <div class="card-content">
-            <h3>SXSW 2026: The Good, The Bad, and The $1,295 Question</h3>
+            <h3>SXSW 2026: Don't Call it A "Music Festival"</h3>
             <p>As SXSW prepares for its 40th-anniversary event in March 2026, the initial speaker lineup has been
               revealed, promising a potent mix of technology, culture, and social commentary.</p>
           </div>
@@ -475,17 +475,7 @@
           </div>
         </a>
       </article>
-      <article class="article-card" amp-fx="fade-in fly-in-bottom" data-fly-in-distance="20">
-        <a href="924.html">
-          <div class="card-image">
-            <amp-img src="assets/924.webp" width="885" height="885" layout="responsive" alt="Austin Traffic"></amp-img>
-          </div>
-          <div class="card-content">
-            <h3>News of the World</h3>
-            <p>for 9/24/2025.</p>
-          </div>
-        </a>
-      </article>
+
       <article class="article-card" amp-fx="fade-in fly-in-bottom" data-fly-in-distance="20">
         <a href="traffic.html">
           <div class="card-image">
