Add landscape support to amp-story element

--- a/amp-story-template.html
+++ b/amp-story-template.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-  <amp-story standalone
+  <amp-story standalone supports-landscape
     title="Redford's 5 Most Iconic Roles (And Why They Last)"
     publisher="Minnow News Network"
     publisher-logo-src="img/fish.png"
