Replace placeholder images and add videos

--- a/stereolab-halloween-2025.html
+++ b/stereolab-halloween-2025.html
@@ -1,4 +1,4 @@
-<!doctype html>
+      <!doctype html>
 <html ⚡>
 <head>
   <meta charset="utf-8">
@@ -67,7 +67,7 @@
     <!-- Page 1: The Setup -->
     <amp-story-page id="cover">
       <amp-story-grid-layer template="fill">
-        <amp-img src="img/placeholder-background.jpg" layout="fill" animate-in="fade-in" animate-in-duration="1s"
+        <amp-img src="img/stereolab-austin.jpeg" layout="fill" animate-in="fade-in" animate-in-duration="1s"
             alt="Abstract image representing 'online vibes'">
         </amp-img>
       </amp-story-grid-layer>
@@ -82,7 +82,7 @@
     <!-- Page 2: The Scene -->
     <amp-story-page id="scene">
       <amp-story-grid-layer template="fill">
-        <amp-img src="img/placeholder-far-out-lounge.jpg" layout="fill" animate-in="pan-left" animate-in-duration="1.5s"
+        <amp-img src="img/IMG_1539.jpeg" layout="fill" animate-in="pan-left" animate-in-duration="1.5s"
             alt="The Far Out Lounge in Austin, TX on Halloween night">
         </amp-img>
       </amp-story-grid-layer>
@@ -96,9 +96,10 @@
     <!-- Page 3: The Crash -->
     <amp-story-page id="crash">
       <amp-story-grid-layer template="fill">
-        <amp-img src="img/placeholder-stereolab-on-stage.jpg" layout="fill" animate-in="zoom-in" animate-in-duration="2s"
-            alt="Stereolab on stage at Levitation">
-        </amp-img>
+            <amp-video autoplay loop width="720" height="1280" layout="responsive"
+                poster="img/IMG_1533. ov">
+                <source src="img/IMG_1516.mov" type="video/mp4">
+            </amp-video>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="bottom">
         <div class="text-box" animate-in="fly-in-top" animate-in-delay="0.5s">
@@ -112,8 +113,8 @@
     <amp-story-page id="masterclass">
         <amp-story-grid-layer template="fill">
             <amp-video autoplay loop width="720" height="1280" layout="responsive"
-                poster="img/placeholder-video-poster.jpg">
-                <source src="videos/placeholder-stereolab-live.mp4" type="video/mp4">
+                poster="img/stereolab-austin.jpeg">
+                <source src="img/stereolab-austin.mov" type="video/mp4">
             </amp-video>
         </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="bottom">
@@ -140,7 +141,7 @@
     <!-- Page 6: The Takeaway -->
     <amp-story-page id="takeaway">
       <amp-story-grid-layer template="fill">
-        <amp-img src="img/placeholder-final-graphic.jpg" layout="fill" animate-in="fade-in"
+        <amp-img src="img/IMG_1539.jpeg" layout="fill" animate-in="fade-in"
             alt="Stylish closing graphic with Stereolab logo or similar">
         </amp-img>
       </amp-story-grid-layer>
